# autonomous-car-

./: .gitignore  03_PI_PC_Img_Code.py  README.md  count.py  download_model.py  download_roboflow.py  fix.py  get_classes.py  main.py  requirements-mac.txt  requirements.txt  run_mac.py  serial_controller.py  stanley controller test  test_cam.py  test_classes_new.py  test_full.py  test_inference.py  test_yolo.py  update_labels.py  update_labels_part2.py
calibration/: calibrate_ipm.py  collect_images.py  utils.py  verify_ipm.py
ros_packages/raven_control/: CMakeLists.txt  package.xml
ros_packages/raven_control/src/: raven_fsm.py  steering_mapper.py
ros_packages/raven_vision/: CMakeLists.txt  package.xml
ros_packages/raven_vision/src/: lane_segmentation.py  lateral_control.py  video_stream_handler.py
src/: 03_PI_PC_Img_Code.py  multi.py  pi_bridge.py  serial_controller.py  shared_state.py  skynet.py  skynet_pi.py  teleop_wasd.py
src/control/: Stanley_Control.py
src/dashboard/: processDashboard.py
src/dashboard/components/: calibration.py  ip_manger.py
src/data/Semaphores/: processSemaphores.py
src/data/TrafficCommunication/: processTrafficCommunication.py
src/hardware/serialhandler/: processSerialHandler.py  serial_link.py
src/perception/lane_detection/: 01_Lane_Detect_v11.py  __init__.py  threadLaneDetection.py
src/perception/localization/: build_map_graph.py  map_waypoints.json  threadLocalization.py
src/perception/odometry/: __init__.py  threadOdometry.py
src/perception/planner/: processPlanner.py  threadPlanner.py
src/perception/sign_recognition/: README.md  live_sign_detector.py  processSignDetection.py  sign_detector.py  (+1 more)
src/statemachine/: systemMode.py
tests/: test_basic.py  test_hardware.py  test_mac_run.py  test_software_sim.py
training_workspace/: finetune_shirts.py  fix_yaml.py  resume_training.py  train_signs.py
training_workspace/Bosch Traffic Signs YOLOv8/: README.dataset.txt  README.roboflow.txt  data.yaml
(+706 files in other folders)
