<?xml version="1.0"?>
<package format="2">
  <name>raven_vision</name>
  <version>0.0.1</version>
  <description>The RAVEN vision package for bridging BFMC Gazebo/Camera images to OpenCV.</description>

  <maintainer email="raven.guc.autosport@gmail.com">RAVEN GP</maintainer>
  <url type="website">https://ravengp-ai.vercel.app</url>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>std_msgs</build_depend>

  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
</package>
